--- a/FrmProductos/FrmProductos/FrmProductos.csproj
+++ b/FrmProductos/FrmProductos/FrmProductos.csproj
@@ -78,5 +78,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="SQL QUERYS\sp_IngresarResena.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
